--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <div id="container">
         <div id="board">
             <div class="row" id="row_0">
-                <div class="square sq-hov" id="0"></div>
-                <div class="square sq-hov" id="1"></div>
-                <div class="square sq-hov" id="2"></div>
+                <div class="square" id="0"></div>
+                <div class="square" id="1"></div>
+                <div class="square" id="2"></div>
             </div>
             <div class="row" id="row_1">
-                <div class="square sq-hov" id="3"></div>
-                <div class="square sq-hov" id="4"></div>
-                <div class="square sq-hov" id="5"></div>
+                <div class="square" id="3"></div>
+                <div class="square" id="4"></div>
+                <div class="square" id="5"></div>
             </div>
             <div class="row" id="row_2">
-                <div class="square sq-hov" id="6"></div>
-                <div class="square sq-hov" id="7"></div>
-                <div class="square sq-hov" id="8"></div>
+                <div class="square" id="6"></div>
+                <div class="square" id="7"></div>
+                <div class="square" id="8"></div>
             </div>
         </div>
     </div>
@@ -54,6 +54,10 @@
         </div>
     </div>
     <script src="app.js"></script>
+    <script>
+        document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +
+            ':35729/livereload.js?snipver=1"></' + 'script>')
+    </script>
 </body>
 
 </html>
