--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
         </div>
     </div>
     <script src="app.js"></script>
-    <script>
+    <!-- <script>
         document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +
             ':35729/livereload.js?snipver=1"></' + 'script>')
-    </script>
+    </script> -->
 </body>
 
 </html>
