--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Tic Tac Toe</title>    
+    <title>Tic Tac Toe</title>
 </head>
 
 <body>
@@ -53,7 +53,13 @@
             <div id="game-over-message">Game Over</div>
         </div>
     </div>
+    <footer>
+        <a href="https://github.com/br3ntor/Purple-Pomodoro">
+            <img src="img/GitHub-Mark-64px.png">
+        </a>
+    </footer>
     <script src="app.js"></script>
+    <!-- Live Reload Script -->
     <!-- <script>
         document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +
             ':35729/livereload.js?snipver=1"></' + 'script>')
