--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
     </div>
     <footer>
-        <a href="https://github.com/br3ntor/Purple-Pomodoro">
+        <a href="https://github.com/br3ntor/Tic-Tac-Toe">
             <img src="img/GitHub-Mark-64px.png">
         </a>
     </footer>
